test/scc_test/stmt/semantic-errors/016.a
016.t:4:9: error: expression must have scalar type